# bear-emu-chip-8

./: CMakeLists.txt  README.md
roms/: test.rom
src/: main.cpp
